--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -18,7 +18,7 @@ const {
 <meta name="generator" content={Astro.generator} />
 <title>{title}</title>
 
-<link rel="icon" type="image/svg+xml" href="/LOGO-06.ico" />
+<link rel="icon" type="image/svg+xml" href="/LOGO-06.png" />
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link
